--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "jest": "^29.7.0",
     "postcss": "^8.4.36",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
+    "react-swipeable": "^7.0.1",
     "sass": "^1.72.0",
     "typescript": "^5"
   }
