--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@
 /out/
 
 # production
-/build
 
 # misc
 .DS_Store
@@ -34,4 +33,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-build
+node_modules
