--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && touch ./build/.nojekyll && gh-pages -d build -t true"
   },
   "dependencies": {
     "@mantine/core": "^7.6.2",
@@ -22,6 +23,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
     "postcss": "^8.4.36",
     "postcss-preset-mantine": "^1.13.0",
