--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
     "deploy": "npm run build && touch ./build/.nojekyll && gh-pages -d build -t true"
@@ -12,8 +12,8 @@
   "dependencies": {
     "@mantine/core": "^7.6.2",
     "@mantine/hooks": "^7.6.2",
-    "next": "14.1.3",
-    "react": "^18",
+    "next": "^14.1.4",
+    "react": "^18.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
